--- a/0-index.html
+++ b/0-index.html
@@ -1,13 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/0-styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Headphones</title>
+    <link rel="icon" type="image/favicon.ico" href="images/favicon.png">
+    <link rel='stylesheet' href='/0-styles.css'>
 </head>
+
 <body>
-    
+    <!--Header-->
+    <header class="header">
+        <div class="container">
+            <div class="header-container">
+                <input type="checkbox" class="menu-btn" />
+                <label for="menu-btn" class="menu-icon">
+                    <span class="navicon"></span>
+                </label>
+                <div class="header-logo">
+                    <a href="#">
+                        <img class="img-logo" src="images/logo_headphones.png" alt="headphone logo">
+                    </a>
+                </div>
+                <nav class="navbar-menu">
+                    <ul class="nav">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">what we do</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">our results</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">contact us</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <section class="hero">
+                <h1>Lorem ipsum dolor set amet lorem ipsum</h1>
+                <span>Lorem ipsum dolor set amet lorem ipsum dolor set</span>
+                <button class="button">CALL TO ACTION</button>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore
+                    magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat.
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                </p>
+            </section>
+        </div>
+    </header>
+    <!--Main-->
+    <main>
+        <!--what we do section--> 
+    </main>
+
 </body>
+
 </html>
